--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ a {
     -webkit-appearance: none;
     appearance: none;
     border: 0;
-    border-radius: 5px;
+    border-radius: 0px;
     color: #1a1a1a;
     cursor: pointer;
     display: inline-flex;
@@ -183,7 +183,7 @@ a {
 
 .filename-text {
     color: #8B4513;
-    font-weight: regular;
+    font-style: italic;
     margin-right: 5px;
     font-size: 8pt;
 }
@@ -191,6 +191,7 @@ a {
 .dimensions-text {
     color: #000;
     font-style: italic;
+    font-size: 8pt;
 }
 
 .resize-handle {
