--- a/style.css
+++ b/style.css
@@ -251,10 +251,10 @@ a {
 
 /* --- Estilos para el Watermark (Independiente) --- */
 .watermark {
-    font-size: 10px; 
-    color: black;    
+    font-size: 10px;    
+    color: black;      
     position: fixed;
     bottom: 15px;
+    right: 15px;
     text-align: right;
-} 
-
+}
