--- a/style.css
+++ b/style.css
@@ -192,6 +192,7 @@ a {
 .filename-text {
     color: #8B4513;
     font-style: italic;
+    font-weight: bold;
     margin-right: 5px;
     font-size: 8pt;
 }
